--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,26 @@
 /* index */
 
 .bg-img{
-    background: url("../assets/img/download.jpg") no-repeat;
+    background: url("../assets/img/bg-head.jpg") no-repeat;
     background-size: cover;
+    width: 100%;
+    height: 500px;
 }
 .main-text{
-    margin-top: 15em;
+    padding-top: 10em;
 }
 .main-text > h1{
     font-size: 4em;
+}
+.main-text p{
+    color: #555;
+}
+.type{
+    width: 100%;
+    height: 15em;
+    background-color: rgb(226, 223, 223);
+    padding: 4em 2em 4em 2em;
+}
+.img{
+    margin: 0 auto;
 }
