--- a/css/style.css
+++ b/css/style.css
@@ -106,10 +106,24 @@
 }
 .type{
     width: 100%;
-    height: 15em;
+    height: auto;
     background-color: rgb(226, 223, 223);
     padding: 4em 2em 4em 2em;
 }
 .img{
     margin: 0 auto;
+}
+.type-info{
+    padding: 3em 0em;
+}
+.type-info-text{
+    padding-top: 2em;
+}
+.type-info-text> p{
+    font-size: 1.2em;
+}
+.text h3{
+    margin-top: 1em;
+    font-weight: 300;
+    font-size: 1.3em;
 }
